@@ -54,3 +54,4 @@ Version: V0.3B4 Date: Sun Nov  6 01:20:57 2005 +++++++++++++++++++++++++++++++
 + new Inventor node for the background gradient
 + new file dialog with options
 + options page for saving image files
++ create screenshots with transparent background (if checked)
